[metadata]
name = django-hbcommons
version = 1.7
description = A series of common used classes for my websites.
long_description = file: README.md
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2.12
    social-auth-app-django >= 5.0.0
    djangorestframework >= 3.10.3